--- a/root/dockerfile
+++ b/root/dockerfile
@@ -10,5 +10,6 @@ RUN wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/`cu
 RUN apt-get install -yqq unzip
 RUN unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
 RUN pip install -r requirements.txt
+RUN ls -l pip install -r requirements.txt
 
 CMD ["python","project/WaterstonesScrapper.py"] 
