--- a/root/dockerfile
+++ b/root/dockerfile
@@ -9,7 +9,8 @@ RUN apt-get install -y google-chrome-stable
 RUN wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip
 RUN apt-get install -yqq unzip
 RUN unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
-RUN pip install -r requirements.txt
+#RUN pip install -r requirements.txt
 RUN ls -l pip install -r requirements.txt
+#RUN  pip install -r root/requirements.txt
 
 CMD ["python","project/WaterstonesScrapper.py"] 
