--- a/root/dockerfile
+++ b/root/dockerfile
@@ -12,7 +12,7 @@ RUN wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/`cu
 RUN apt-get install -yqq unzip
 RUN unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
 RUN pip install --upgrade pip
-RUN  pip install -r requirements.txt
+RUN  pip install -r /mydirectory/root/requirements.txt
 
 COPY . .
 
