--- a/root/dockerfile
+++ b/root/dockerfile
@@ -1,9 +1,7 @@
 FROM python:latest
 
 
-#RUN mkdir /mydirectory/
-#WORKDIR /mydirectory/
-#COPY . . /mydirectory/
+
 RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
 RUN sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
 RUN apt-get -y update
@@ -12,8 +10,8 @@ RUN wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/`cu
 RUN apt-get install -yqq unzip
 RUN unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
 RUN pip install --upgrade pip
-RUN  pip install -r requirements.txt
+RUN  pip install -r root/requirements.txt
 
-COPY . .
+
 
 CMD ["python","project/WaterstonesScrapper.py"] 
