--- a/root/dockerfile
+++ b/root/dockerfile
@@ -3,7 +3,7 @@ FROM python:latest
 
 RUN mkdir /mydirectory/
 WORKDIR /mydirectory/
-#COPY . . /mydirectory/
+COPY . . /mydirectory/
 RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
 RUN sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
 RUN apt-get -y update
@@ -14,6 +14,6 @@ RUN unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
 RUN pip install --upgrade pip
 RUN  pip install -r /mydirectory/root/requirements.txt
 
-COPY . .
+#COPY . .
 
 CMD ["python","project/WaterstonesScrapper.py"] 
