--- a/root/dockerfile
+++ b/root/dockerfile
@@ -1,9 +1,5 @@
 FROM python:latest
-
-
-RUN mkdir /mydirectory/
-WORKDIR /mydirectory/
-COPY . . /mydirectory/
+WORKDIR /mydirectory
 RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
 RUN sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
 RUN apt-get -y update
@@ -12,8 +8,8 @@ RUN wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/`cu
 RUN apt-get install -yqq unzip
 RUN unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
 RUN pip install --upgrade pip
-RUN  pip install -r /mydirectory/root/requirements.txt
-
-#COPY . .
-
-CMD ["python","/root/project/WaterstonesScrapper.py"] 
+COPY requirements.txt ./
+RUN pip install -r requirements.txt
+COPY ./ ./
+WORKDIR /mydirectory/project
+CMD ["python","./WaterstonesScrapper.py"] 
