--- a/root/dockerfile
+++ b/root/dockerfile
@@ -8,8 +8,8 @@ RUN wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/`cu
 RUN apt-get install -yqq unzip
 RUN unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
 RUN pip install --upgrade pip
-COPY requirements.txt ./
+COPY requirements.txt .
 RUN pip install -r root/requirements.txt
-COPY ./ ./
+COPY . .
 WORKDIR /mydirectory/project
-CMD ["python","./WaterstonesScrapper.py"] 
+CMD ["python",".WaterstonesScrapper.py"] 
