--- a/root/dockerfile
+++ b/root/dockerfile
@@ -1,5 +1,7 @@
 FROM python:latest
-WORKDIR /mydirectory
+
+COPY . .
+
 RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
 RUN sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
 RUN apt-get -y update
@@ -7,9 +9,6 @@ RUN apt-get install -y google-chrome-stable
 RUN wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip
 RUN apt-get install -yqq unzip
 RUN unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
-RUN pip install --upgrade pip
-COPY requirements.txt .
-RUN pip install -r root/requirements.txt
-COPY . .
-WORKDIR /mydirectory/project
-CMD ["python",".WaterstonesScrapper.py"] 
+RUN  pip install -r root/requirements.txt
+
+CMD ["python","project/WaterstonesScrapper.py"] 
