--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
-        name: Checkout
-        uses: actions/checkout@v3
-      -
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -25,7 +22,6 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: "{{defaultContext}}"
-          file: ./root/Dockerfile
+          context: "{{defaultContext}}:root"
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/waterstonesscrapper_v7:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/waterstonesscrapper_v8:latest
