--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: "{{defaultContext}}:root"
+          context: "{{defaultContext}}"
           file: ./root/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/waterstonesscrapper_v8:latest
