--- a/root/dockerfile
+++ b/root/dockerfile
@@ -14,4 +14,4 @@ RUN unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
 #run requirments
 RUN  pip install -r requirements.txt
 #run application
-CMD ["python","root/project/WaterstonesScrapper.py"] 
+CMD ["python","WaterstonesScrapper.py"] 
